--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,5 +1,25 @@
 .Footer{
-    background-color: aqua;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 20px;
+    align-items: center;
+    background-color: white;
     width: 100%;
     height: 200px;
 }
+
+.info{
+    font-size: 30px;
+}
+
+.socials{
+    margin: 30px;
+  
+  }
+  
+.social{
+    height: 30px;
+    width: auto;
+    margin: 0px 20px;
+  }
