--- a/src/Components/Movies/Movies.css
+++ b/src/Components/Movies/Movies.css
@@ -10,11 +10,40 @@ img {
     flex-direction: column;
     justify-content: center;
     gap: 5px;
-    height: 320px;
-    width: 200px;
+    min-height: 320px;
+    min-width: 200px;
+    max-height: 320px;
+    max-width: 200px;
     background-color: aliceblue;
     padding: 15px;
     border: 1px solid black;
     font-weight: 600;
     text-align: start;
 }
+
+.container{
+    display: flex;
+    flex-direction: column;
+}
+
+.container-name > h1{
+    color: white;
+    font-size: 20px;
+    font-weight: 400;
+    margin: 20px 0px 0px 20px;
+}
+
+
+.Movie{
+    display: flex;
+    justify-content: flex-start;
+    background-color: transparent;
+    padding: 10px 0 5px 20px;
+    overflow-x:scroll;
+
+}
+
+
+
+
+
